# Yo-kart-racing-3d

./: .gitignore  CLAUDE.md  PLAN_IMMERSION.md  PLAN_MULTIPLAYER.md  README.md  REFACTORING.md  TRACK_BUILDING_GUIDE.md  circuit-reference.md  fiche technique Pills stadium.odt  generate-icon.js  package-lock.json  package.json  server.js
public/: index.html  manifest.json
public/css/: style.css
public/js/: ai.js  audio.js  config.js  game.js  ghost.js  input.js  items.js  kart.js  leaderboard.js  main.js  particles.js  physics.js  player.js  scores.js  slipstream.js  track.js  ui.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
