[package]
name = "pills-stadium"
version = "1.0.0"
description = "Pills Stadium - Jeu de course de karts 3D"
authors = ["YdvSystems"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
